--- a/PenisPincher.Persistence/PenisPincher.Persistence.csproj
+++ b/PenisPincher.Persistence/PenisPincher.Persistence.csproj
@@ -8,4 +8,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PenisPincher.Utilities\PenisPincher.Utilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configuration\Mappings\" />
+  </ItemGroup>
+
 </Project>
