--- a/PenisPincher.Discord/PenisPincher.Discord.csproj
+++ b/PenisPincher.Discord/PenisPincher.Discord.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PenisPincher.Core\PenisPincher.Core.csproj" />
     <ProjectReference Include="..\PenisPincher.Persistence\PenisPincher.Persistence.csproj" />
     <ProjectReference Include="..\PenisPincher.Utilities\PenisPincher.Utilities.csproj" />
   </ItemGroup>
