--- a/PenisPincher.Discord/PenisPincher.Discord.csproj
+++ b/PenisPincher.Discord/PenisPincher.Discord.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.1.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.1" />
+    <PackageReference Include="TwitchLib.Api" Version="3.2.2" />
   </ItemGroup>
 
   <ItemGroup>
