Moved Entity to Core and reversed dependency between core and persistence to resolve cyclic dependency issues.

--- a/PenisPincher.Persistence/PenisPincher.Persistence.csproj
+++ b/PenisPincher.Persistence/PenisPincher.Persistence.csproj
@@ -10,11 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PenisPincher.Core\PenisPincher.Core.csproj" />
     <ProjectReference Include="..\PenisPincher.Utilities\PenisPincher.Utilities.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Configuration\Mappings\" />
   </ItemGroup>
 
 </Project>
