--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Config-ignores
+_config.yaml
+dbconfig.yaml
+
 # User-specific files
 *.rsuser
 *.suo
