--- a/PenisPincher.Discord/PenisPincher.Discord.csproj
+++ b/PenisPincher.Discord/PenisPincher.Discord.csproj
@@ -7,9 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.3.1" />
-    <PackageReference Include="Extensions.Configuration" Version="0.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.1.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.1" />
     <PackageReference Include="TwitchLib.Api" Version="3.2.2" />
   </ItemGroup>
@@ -22,6 +19,15 @@
 
   <ItemGroup>
     <Folder Include="Modules\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="_config.template.yaml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="_config.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
