--- a/PenisPincher.Discord/PenisPincher.Discord.csproj
+++ b/PenisPincher.Discord/PenisPincher.Discord.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
+    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.1.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.1" />
     <PackageReference Include="TwitchLib.Api" Version="3.2.2" />
   </ItemGroup>
