--- a/PenisPincher.Discord/PenisPincher.Discord.csproj
+++ b/PenisPincher.Discord/PenisPincher.Discord.csproj
@@ -9,8 +9,7 @@
     <PackageReference Include="Discord.Net" Version="2.3.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
-    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.2" />
     <PackageReference Include="TwitchLib.Api" Version="3.2.2" />
   </ItemGroup>
@@ -26,10 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="_config.template.yaml">
+    <None Update="_config.template.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-    <None Update="_config.yaml">
+    <None Update="_config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
