--- a/PenisPincher.Persistence/PenisPincher.Persistence.csproj
+++ b/PenisPincher.Persistence/PenisPincher.Persistence.csproj
@@ -12,8 +12,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
-    <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,10 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="dbconfig.template.yaml">
+    <None Update="dbconfig.template.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
-    <None Update="dbconfig.yaml">
+    <None Update="dbconfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
